took out callouts, fixed WRAP PHASE, removed print money img

--- a/styles.css
+++ b/styles.css
@@ -108,19 +108,6 @@ h4 {
     font-size: 18px;
 }
 
-.callout {
-    display: flex;
-    align-items: center;
-    border: 1px solid #555555;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    padding: 10px 5px;
-}
-
-.callout p {
-    margin-bottom: 0px;
-}
-
 .how-title {
     font-family: "NeueMontreal-bold", sans-serif;
     margin-top: 50px;
@@ -303,14 +290,6 @@ ul ul li {
     h3 {
         font-size: 16px;
         letter-spacing: 1px;
-    }
-
-    .callout i {
-        margin-top: 5px;
-    }
-
-    .callout p {
-        margin-bottom: 0px;
     }
 
     #sba-badger {
@@ -658,18 +637,6 @@ ul ul li {
         margin: auto;
     }
 
-    .callout {
-        display: flex;
-        align-items: center;
-        border: 1px solid #555555;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        padding: 15px;
-    }
-
-
-
-
     .music-player {
         background: #191919;
         height: 70px;
@@ -764,21 +731,6 @@ ul ul li {
         color: #191919;
         cursor: pointer;
     }
-
-    .callout {
-        display: flex;
-        align-items: center;
-        border: 1px solid #555555;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        padding: 15px;
-    }
-
-    .callout p {
-        margin-bottom: 0;
-    }
-
-
 
     .audio-stack {
         width: auto;
